--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
             <div class="card p-4 b">
                 <form class="b">
                     <div class="row mb-3 b">
-                        <label for="inputUsuario3" class="col-sm-2 col-form-label b">Usuario</label>
+                        <label for="ID_Usuario" class="col-sm-2 col-form-label b">Usuario</label>
                         <div class="col-sm-10 b">
-                            <input type="text" class="form-control b" id="inputUsuario3">
+                            <input type="text" class="form-control b" id="ID_Usuario">
                         </div>
                     </div>
                     <div class="row mb-3 b">
-                        <label for="inputPassword3" class="col-sm-2 col-form-label b">Password</label>
+                        <label for="ID_Contrasenia" class="col-sm-2 col-form-label b">Contraseña</label>
                         <div class="col-sm-10 b">
-                            <input type="password" class="form-control b" id="inputPassword3">
+                            <input type="password" class="form-control b" id="ID_Contrasenia">
                         </div>
                     </div>
                 </form>
+                <div id="ID_MsjError" style="display: none;">
+                    <small style="color: red;"> <strong>Usuario o contraseña incorrectos</strong></small>
+                    <br><br>
+                </div>
                 <button class="btn btn-sm btn-primary finit">Iniciar</button>
             </div>
 
@@ -57,9 +61,6 @@
 
         </div>
     </div>
-
-
-
 
 
 
