--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <script src="./recursos/bootstrap/popper.min.js"></script>
     <script src="./recursos/js/jquery-3.7.1.min.js"></script>
     <script src="./recursos/js/login/login.js"></script>
+    <script src="./recursos/js/app.js"></script>
 </body>
 
 </html>
