--- a/modulos/programas/bandeja.html
+++ b/modulos/programas/bandeja.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Capacitaciones</title>
     <link rel="stylesheet" href="/recursos/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/recursos/datatable/dataTables.min.css">
 </head>
+
 <body class="container py-5">
     <div>
-        <h5>Bandeja de Programas</h5>
+        <div>
+            <h5>Bandeja de Programas</h5>
+        </div>
+        <div>
+            <span id="id_user"></span>
+        </div>
 
     </div>
+    <hr class="my-5">
+
     <div>
-        <!--Crear tabla-->
+        <table class="table" id="ID_tb_Programas">
+        </table>
     </div>
-    
+
 
     <script src="/recursos/bootstrap/bootstrap.min.js"></script>
     <script src="/recursos/bootstrap/popper.min.js"></script>
     <script src="/recursos/js/jquery-3.7.1.min.js"></script>
+    <script src="/recursos/datatable/dataTables.min.js"></script>
+    <script src="/recursos/js/app.js"></script>
     <script src="/recursos/js/programas/programas.js"></script>
+
 </body>
 <!--Omitir - Ignorar
     > Capturar el usuario desde la URL
@@ -33,4 +47,5 @@
     > NOMBRES COMPLETOS  %PARTICIPACIÓN (Si el equipo lo considera - opcional)
 
 -->
+
 </html>
