--- a/modulos/programas/bandeja.html
+++ b/modulos/programas/bandeja.html
@@ -23,6 +23,17 @@
 
     <div>
         <table class="table" id="ID_tb_Programas">
+            <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Nombre</th>
+                    <th>Nro Cursos</th>
+                    <th>Fec. Inicio</th>
+                    <th>Fec. Fin</th>
+                    <th>Aciones</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
         </table>
     </div>
 
@@ -35,7 +46,7 @@
     <script src="/recursos/js/programas/programas.js"></script>
 
 </body>
-<!--Omitir - Ignorar
+<!--TAREA 01 : Omitir - Ignorar 
     > Capturar el usuario desde la URL
     > Mostrar en alguna parte al usuario obtenido desde la URL
     > Construir una tabla de programas
@@ -45,6 +56,9 @@
 
     > LISTA DE PARTICIPANTE
     > NOMBRES COMPLETOS  %PARTICIPACIÓN (Si el equipo lo considera - opcional)
+
+
+    TAREA 02 - Contruir un modal con el detalle del programa y los cursos con sus respectivos temas
 
 -->
 
